--- a/hw/hw-04.qmd
+++ b/hw/hw-04.qmd
@@ -1,7 +1,273 @@
 ---
-title: "HW 04"
+title: "HW 04: Logistic regression"
 
 bibliography: references.bib
 ---
 
-To be posted.
+::: callout-important
+## Due date
+
+This assignment is due on **Thursday, April 10 at 11:59pm.**
+:::
+
+# Introduction
+
+In this assignment you will work with logistic regression models and use them to understand multivariable relationships in a variety of data contexts.
+
+# Learning goals
+
+In this assignment, you will…
+
+-   Use logistic regression to explore the relationship between a binary response variable and multiple predictor variables
+
+-   Conduct exploratory data analysis for logistic regression
+
+-   Interpret coefficients of logistic regression model
+
+-   Use statistics to help choose the best fit model
+
+-   Assess the fit of a logistic regression model
+
+# Getting started
+
+-   Go to the [sta221-sp25](https://www.github.com/sta221-sp25) organization on GitHub. Click on the repo with the prefix **hw-03**. It contains the starter documents you need to complete the lab.
+
+-   Clone the repo and start a new project in RStudio. See the [Lab 00 instructions](https://sta221-sp25.netlify.app/labs/lab-00.html#getting-started) for details on cloning a repo and starting a new project in R.
+
+# Packages
+
+The following packages are used in this assignment:
+
+```{r}
+#| eval: false
+
+library(tidyverse)
+library(tidymodels)
+library(knitr)
+library(pROC)
+
+# load other packages as needed
+```
+
+# Conceptual exercises
+
+## Instructions
+
+The conceptual exercises are focused on explaining concepts and showing results mathematically. Show your work for each question.\
+\
+**You may write the answers and associated work for conceptual exercises by hand or type them in your Quarto document.**
+
+## Exercise 1
+
+<!--# from Ex 7.11 (pg. 356 in Casella Berger-->
+
+Let $x_1, \ldots, x_n$ be independently and identically distributed (i.i.d.) sample observations from a distribution where
+
+$$
+f(x | \theta) = \theta x^{\theta - 1} \hspace{8mm} 0\leq x\leq 1, \hspace{3mm} 0 < \theta < \infty
+$$
+
+1.  Find the maximum likelihood estimator (MLE) of $\theta$.
+2.  Is the estimator unbiased? Show your work and briefly explain.
+3.  Is the estimator consistent? Show your work and briefly explain.
+
+## Exercise 2
+
+<!--# From Casella and Berger-->
+
+Suppose there are $n$ observations, such that each $y_i$ is generated from $x_i$ based on the linear model
+
+$$
+y_i = \beta_0 + \beta_1 x_i + \epsilon_i, \hspace{8mm} \epsilon_i \sim N(0, \sigma^2_{\epsilon})
+$$
+
+such that $\epsilon_i$ are i.i.d.
+
+The model is reparameterized (redefined) as
+
+$$
+y_i = \beta^{\prime}_0 + \beta^{\prime}_1(x_i - \bar{x}) + \epsilon_i
+$$
+
+such that $\epsilon_i$ follows the same distribution as the original model.
+
+a.  Show that the MLE of $\beta^{\prime}_1$ is equal to the MLE of $\beta_1$.
+b.  Show that the MLE of $\beta^{\prime}_0$ is <u><b>not</b></u> equal to the MLE of $\beta_0$.
+
+::: callout-tip
+You do not need to derive the MLEs for $\beta_0$ and $\beta_1$. You may use the results from the notes.
+
+You do need to show your work / explain your reasoning to get the MLEs for $\beta^{\prime}_0$ and $\beta^{\prime}_1$ .
+:::
+
+## Exercise 3[^1]
+
+[^1]: Exercise adapted froman exercise in *Categorical Data Analysis* by Agresti.
+
+<!--# from categorical data analysis number 5.29 (pg. 204)-->
+
+@berry2001statistician examined the effect of a player's draft position among the pool of potential players in a given year to the probability on eventually being named an all star.
+
+Let $d$ be the draft position $(d = 1, 2, 3, \ldots)$ and $\pi$ be the probability of eventually being named an all star. The researcher modeled the relationship between $d$ and $\pi$ using the following model:
+
+$$
+\log\Big(\frac{\pi_i}{1-\pi_i}\Big) = \beta_0 + \beta_1 \log d_i
+$$
+
+a.  Using this model, show that the odds of being named an all star are $e^{\beta_0}d^{\beta_1}$ . Then, show how to calculate $\pi_i$ based on this model.
+
+b.  Show that the odds of being named an all star for a first draft pick are $e^{\beta_0}$ .
+
+c.  In the study, Berry reported that for professional basketball $\hat{\beta}_0 = 2.3$ and $\hat{\beta}_1 = -1.1$, and for professional baseball $\hat{\beta}_0 = 0.7$ and $\hat{\beta}_1 = -0.6$ . Explain why this suggests that (1) being a first draft pick is more crucial for being an all star in basketball than in baseball and (2) players picked in high draft positions are relatively less likely to be all stars.
+
+## Exercise 4
+
+In the paper [“](https://web-s-ebscohost-com.proxy.lib.duke.edu/ehost/pdfviewer/pdfviewer?vid=0&sid=221ae3cd-b01e-4432-a4dc-4b259e895086%40redis)[Employing Standardized Risk Assessment in Pretrial Release Decisions: Association With Criminal Justice Outcomes and Racial Equity”](https://pubmed.ncbi.nlm.nih.gov/33090864/) @marlowe2020employing analyze the risk predictions produced by a black-box algorithm used to determine whether a defendant is considered “high risk” of being rearrested if they are released while awaiting trial. Such algorithms are used by judges in some states to help determine whether or not defendants are released while awaiting trial.
+
+The authors examine the algorithm’s risk predictions and whether a person was rearrested for over 500 defendants released pretrial in a southern state. For each person, the algorithm produced one of the following predictions: “High Risk” or “Low Risk”. The observed outcome was “Rearrested” (coded as 1) or “Not Rearrested” (coded as 0). Below are some results from the analysis:
+
+-   Sensitivity: 86%
+-   Specificity: 24%
+-   Positive predictive power (Precision): 57%
+-   Negative predictive power: 60%
+
+::: callout-tip
+-   **Positive Predictive Power (Precision)**: P(Y = 1 \| Y classified as 1 from the model)
+
+-   **Negative Predictive Power**: P(Y = 0 \| Y classified as 0 from the model)
+:::
+
+a.  Explain what each of the following mean in the context of the analysis:
+
+    -   Sensitivity
+
+    -   Specificity
+
+    -   Positive predictive power (Precision)
+
+    -   Negative predictive power
+
+b.  What is the false positive rate? What does this value mean in the context of the analysis?
+
+# Applied exercises
+
+## Instructions
+
+The applied exercises are focused on applying the concepts to analyze data.
+
+**All work for the applied exercises must be typed in your Quarto document following a reproducible workflow.**
+
+Write all narrative using complete sentences and include informative axis labels / titles on visualizations.
+
+## Data: Understanding pro-environmental behavior
+
+@ibanez2022impact conducted an experiment to understand the impact of watching a nature documentary on pro-environmental behavior. The researchers randomly assigned the 113 participants to watch an video about architecture in NYC (control) or a video about Yellowstone National Park (treatment). As part of the experiment, participants played a game in which they had an opportunity to donate to an environmental organization.
+
+The data set is available in `nature-experiment.csv` in the `data` folder. We will use the following variables:
+
+-   `donation_binary`:
+
+    -   1 - participant donated to environmental organization
+    -   0 - participant did not donate
+
+-   `age`: Age in years
+
+-   `gender`: Participant's reported gender
+
+    -   1 - male
+
+    -   0 - non-male
+
+-   `treatment`:
+
+    -   "URBAN (T1)" - the control group
+    -   "NATURE (T2)" - the treatment group
+
+-   `nep_high`:
+
+    -   1 - score of 4 or higher on the New Ecological Paradigm (NEP)
+    -   0 - score less than 4
+
+::: callout-tip
+See the Introduction and Methods sections of @ibanez2022impact for more detail about the variables.
+
+[Click here](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0275806) to access the paper online.
+:::
+
+## Exercise 5
+
+a.  Create a visualization of the relationship between donating and treatment. Use the visualization to describe the relationship between the two variables.
+
+b.  Create a visualization of the relationship between donating and age. Use the visualization to describe the relationship between the two variables.
+
+c.  We would like to use the mean-centered value of `age` in the model. Create a new variable `age_cent` that contains the mean-centered ages.
+
+## Exercise 6
+
+a.  Fit a logistic regression model using `age_cent`, `gender`, `treatment`, and `nep_high` to predict the likelihood of donating. Neatly display the model using 3 digits.
+
+b.  The researchers are most interested in the effect of watching the nature documentary. Describe the effect of `treatment` in terms of the **odds** of donating.
+
+c.  What group of participants is described by the intercept? What is the predicted probability a randomly selected individual in this group donates?
+
+## Exercise 7
+
+Produce the ROC curve for the model from the previous exercise and calculate the area under curve (AUC). Write 1 - 2 sentences describing how well the model fits the data.
+
+## Exercise 8
+
+The authors include an interaction effect between `nep_high` and `treatment` in one of their models.
+
+a.  Explain what an interaction between `nep_high` and `treatment` means in the context of the data.
+b.  Create a visualization to explore the potential of an interaction effect between these two variables. Based on the visualization, do you think there is an interaction effect? Briefly explain.
+
+## Exercise 9
+
+Conduct a drop-in-deviance test to determine if the interaction between `nep_high` and `treatment` should be added to the model fit in Exercise 7. Include the hypotheses in mathematical notation, the output from the test, and the conclusion in the context of the data.
+
+# Submission
+
+::: callout-warning
+Before you wrap up the assignment, make sure all documents are updated on your GitHub repo. We will be checking these to make sure you have been practicing how to commit and push changes.
+
+Remember -- you must turn in a PDF file to the Gradescope page before the submission deadline for full credit.
+
+If you write your responses to conceptual exercises by hand, you will need to combine your written work to the completed PDF for the applied exercises before submitting on Gradescope.
+
+Instructions to combine PDFs:
+
+-   Preview (Mac): [support.apple.com/guide/preview/combine-pdfs-prvw43696/mac](https://support.apple.com/guide/preview/combine-pdfs-prvw43696/mac)
+
+-   Adobe (Mac or PC): help[.adobe.com/acrobat/using/merging-files-single-pdf.html](https://helpx.adobe.com/acrobat/using/merging-files-single-pdf.html)
+
+    -   Get free access to Adobe Acrobat as a Duke student: [oit.duke.edu/help/articles/kb0030141/](https://oit.duke.edu/help/articles/kb0030141/)
+:::
+
+To submit your assignment:
+
+-   Access Gradescope through the menu on the [STA 221 Canvas site.](https://canvas.duke.edu/courses/51767)
+
+-   Click on the assignment, and you’ll be prompted to submit it.
+
+-   Mark the pages associated with each exercise. All of the pages of your lab should be associated with at least one question (i.e., should be “checked”).
+
+-   Select the first page of your .PDF submission to be associated with the *“Workflow & formatting”* section.
+
+# Grading
+
+| Component             | Points |
+|-----------------------|--------|
+| Ex 1                  | 8      |
+| Ex 2                  | 6      |
+| Ex 3                  | 6      |
+| Ex 4                  | 4      |
+| Ex 5                  | 5      |
+| Ex 6                  | 5      |
+| Ex 7                  | 4      |
+| Ex 8                  | 5      |
+| Ex 9                  | 4      |
+| Workflow & formatting | 3      |
+
+The "Workflow & formatting" grade is to assess the reproducible workflow and document format for the applied exercises. This includes having at least 3 informative commit messages, a neatly organized document with readable code and your name and the date updated in the YAML.
+
+# References
