--- a/project.qmd
+++ b/project.qmd
@@ -317,6 +317,8 @@ The draft will be graded based on whether there is demonstration of a reasonable
 
 ### Peer review
 
+**The peer review is due on Friday, April 11 at 11:59pm**.
+
 Critically reviewing others' work is a crucial part of the scientific process, and STA 221 is no exception. Each lab team will be assigned two other teams' projects to review. Each team should push their draft to their GitHub repo by 10 am on the day their lab's draft is due. The lab that week will be dedicated to the peer review, so your team will have time to review and provide quality feedback to two other teams.
 
 During the peer review process, you will be provided read-only access to your partner teams' GitHub repos. Provide your review in the form of GitHub issues to your partner team's GitHub repo using the issue template provided in the repo.
@@ -326,7 +328,7 @@ During the peer review process, you will be provided read-only access to your pa
 ::: callout-important
 ## Peer review assignments
 
-Click here to see the teams you're peer reviewing.You'll spend about 30 minutes reviewing each project.
+Go to the Canvas announcement to see the teams you're peer reviewing.You'll spend about 30 minutes reviewing each project.
 :::
 
 -   When you get to lab, you should have access to the GitHub repos for the teams you're reviewing. In GitHub, search the repositories for `project`, and you should see the repos for the projects you're reviewing. You will be able to read the files in the repo and post issues, but you cannot push changes to the repo. You will have access to the repo until the deadline for the peer review.
